--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -7,7 +7,7 @@
 {% block content %}
   <div class="container py-5">
     <h1>Все посты автора</h1>
-    {% include 'posts/includes/switcher.html' %}
+    {% include 'posts/includes/switcher.html' with follow=True %}
     {% for post in page_obj %}
       {% include 'posts/includes/card_post.html' %}
       {% if not forloop.last %}<hr>{% endif %}
