--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -9,21 +9,25 @@
     <div class="mb-5">
   <h1>Все посты пользователя {{ author.username }}</h1>
   <h3>Всего постов: {{ count }}</h3>
-  {% if following %}
-    <a
-      class="btn btn-lg btn-light"
-      href="{% url 'posts:profile_unfollow' author.username %}" role="button"
-    >
-      Отписаться
-    </a>
-  {% else %}
-      <a
-        class="btn btn-lg btn-primary"
-        href="{% url 'posts:profile_follow' author.username %}" role="button"
-      >
-        Подписаться
-      </a>
-   {% endif %}
+  <h3>Всего подписок: {{ author.follower.count }}</h3>
+  <h3>Всего подписчиков: {{ author.following.count }}</h3>
+  {% if request.user != author %}
+    {% if following %}
+        <a
+        class="btn btn-lg btn-light"
+        href="{% url 'posts:profile_unfollow' author.username %}" role="button"
+        >
+        Отписаться
+        </a>
+    {% else %}
+        <a
+         class="btn btn-lg btn-primary"
+         href="{% url 'posts:profile_follow' author.username %}" role="button"
+        >
+            Подписаться
+        </a>
+    {% endif %}
+  {% endif %}
 </div>
     {% for post in page_obj %}
       {% include 'posts/includes/card_post.html' with flag_profile=True %}
