--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,11 +1,11 @@
 {% extends "base.html" %}
-{% block title %}Последние обновления на сайте {% endblock %}}
+{% block title %}Последние обновления на сайте {% endblock %}
 {% block content %}
   <div class="container py-5">
     {% load cache %}
-    {% cache 30 sidebar index page_obj.number %}
     <h1>Главная страница</h1>
-    {% include 'posts/includes/switcher.html' with index=True%}
+    {% include 'posts/includes/switcher.html' with index=True %}
+    {% cache 30 sidebar index page_obj.number %}
     {% for post in page_obj %}
       {% include 'posts/includes/card_post.html' %}
       {% if not forloop.last %}<hr>{% endif %}
