--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -12,20 +12,22 @@
   <h3>Всего подписок: {{ author.follower.count }}</h3>
   <h3>Всего подписчиков: {{ author.following.count }}</h3>
   {% if request.user != author %}
-    {% if following %}
-        <a
-        class="btn btn-lg btn-light"
-        href="{% url 'posts:profile_unfollow' author.username %}" role="button"
-        >
-        Отписаться
-        </a>
-    {% else %}
-        <a
-         class="btn btn-lg btn-primary"
-         href="{% url 'posts:profile_follow' author.username %}" role="button"
-        >
-            Подписаться
-        </a>
+    {% if user.is_authenticated %}
+      {% if following %}
+          <a
+          class="btn btn-lg btn-light"
+          href="{% url 'posts:profile_unfollow' author.username %}" role="button"
+          >
+          Отписаться
+          </a>
+      {% else %}
+          <a
+          class="btn btn-lg btn-primary"
+          href="{% url 'posts:profile_follow' author.username %}" role="button"
+          >
+          Подписаться
+          </a>
+      {% endif %}
     {% endif %}
   {% endif %}
 </div>
